# Mastermind

./: README.md  i18n.py  main.py  pyproject.toml  translations.json
